# hg

./: .gitattributes  .hgignore  .hgsigs  .hgtags  CONTRIBUTING.md  MANIFEST.in  Makefile  README.rst  black.toml  hg  hgweb.cgi  pyproject.toml  rustfmt.toml  setup.py
contrib/: adjust-pytype-cache.sh  all-revsets.txt  base-revsets.txt  bdiff-torture.py  build-one-linux-wheel.sh  byteify-strings.py  casesmash.py  catapipe.py  check-code.py  check-commit  check-config.py  check-import  check-py3-compat.py  check-pytype.sh  clang-format-ignorelist  cleanup-pipeline.sh  debugcmdserver.py  debugshell.py  dirstatenonnormalcheck.py  dumprevlog  fix-conf.rc  genosxversion.py  heptapod-ci.yml  hg-ssh  hg-test-mode.el  hgclient.py  hgk  import-checker.py  import-lab-tree-color.sh  install-windows-dependencies.ps1  memory.py  perf.py  phab-clean.py  phab-refresh-stack.sh  pull_logger.py  python3-ratchet.py  python3-whitelist  revsetbenchmarks.py  setup-dev-tool.sh  setup-pytype.sh  (+6 more)
contrib/merge-lists/: Cargo.toml
contrib/merge-lists/src/: main.rs
contrib/merge-lists/tests/: test-merge-lists.rs
doc/: Makefile  check-seclevel.py  docchecker  gendoc.py  hgmanpage.py  runrst
hgdemandimport/: __init__.py  demandimportpy2.py  demandimportpy3.py  tracing.py
hgext/: absorb.py  acl.py  amend.py  automv.py  beautifygraph.py  blackbox.py  bookflow.py  bugzilla.py  censor.py  chainsaw.py  children.py  churn.py  clonebundles.py  closehead.py  commitextras.py  eol.py  extdiff.py  factotum.py  fastexport.py  fetch.py  fix.py  githelp.py  gpg.py  graphlog.py  hgk.py  histedit.py  journal.py  keyword.py  logtoprocess.py  mq.py  notify.py  pager.py  patchbomb.py  phabricator.py  purge.py  rebase.py  record.py  releasenotes.py  relink.py  remotenames.py  (+13 more)
i18n/: check-translation.py  de.po  hggettext  ja.po  polib.py  posplit  pt_BR.po
mercurial/: __init__.py  __main__.py  admin_commands.py  ancestor.py  archival.py  bitmanipulation.h  bookmarks.py  branchmap.py  bundle2.py  bundle2_part_handlers.py  bundlecaches.py  bundlerepo.py  cacheutil.py  changegroup.py  changelog.py  chgserver.py  cmdutil.py  color.py  commands.py  commandserver.py  commit.py  config.py  configitems.py  configitems.toml  context.py  copies.py  crecord.py  dagop.py  dagparser.py  debugcommands.py  destutil.py  diffhelper.py  diffutil.py  dirstate.py  dirstateguard.py  dirstatemap.py  discovery.py  dispatch.py  encoding.py  error.py  (+121 more)
relnotes/: 3.7  3.8  3.9  4.0  4.1  4.2  4.3  4.4  4.5  4.6  4.7  4.8  4.9  5.0  5.1  5.2  5.3  5.4  5.5  5.6  5.7  5.8  5.9  6.0  6.1  6.2  6.3  6.4  6.5  6.6  6.7  6.8  6.9  7.0  7.1  7.2  next
rust/: Cargo.toml  README.md  README.rst  clippy.toml
rust/hg-core/: Cargo.toml  build.rs
rust/hg-core/examples/nodemap/: index.rs  main.rs
rust/hg-core/src/: ancestors.rs  bdiff.rs  checkexec.rs  config.rs  copy_tracing.rs  dagops.rs  dirstate.rs  dirstate_tree.rs  discovery.rs  dyn_bytes.rs  encoding.rs  errors.rs  exit_codes.rs  file_patterns.rs  filepatterns.rs  fncache.rs  lib.rs  linkrev.rs  lock.rs  logging.rs  matchers.rs  narrow.rs  pre_regex.rs  progress.rs  repo.rs  requirements.rs  revlog.rs  revset.rs  sparse.rs  testing.rs  transaction.rs  update.rs  utils.rs  vfs.rs  warnings.rs
rust/hg-core/src/config/: config.rs  config_items.rs  layer.rs  mod.rs  plain_info.rs  values.rs
rust/hg-core/src/copy_tracing/: tests.rs  tests_support.rs
rust/hg-core/src/dirstate/: dirs_multiset.rs  dirstate_map.rs  entry.rs  mod.rs  on_disk.rs  owning.rs  parsers.rs  path_with_basename.rs  status.rs
rust/hg-core/src/dirstate/dirstate_tree/: iter.rs  node.rs  tree.rs
rust/hg-core/src/dirstate_tree/: dirstate_map.rs  dispatch.rs  on_disk.rs  owning.rs  owning_dispatch.rs  path_with_basename.rs  status.rs
rust/hg-core/src/file_index/: mod.rs  mutable_tree.rs  on_disk.rs  tests.rs
rust/hg-core/src/narrow/: mod.rs  shape.rs
rust/hg-core/src/operations/: annotate.rs  cat.rs  debugdata.rs  dirstate_status.rs  find_root.rs  list_tracked_files.rs  mod.rs  status_rev_rev.rs
rust/hg-core/src/revlog/: changelog.rs  compression.rs  deltas.rs  diff.rs  file_io.rs  filelog.rs  index.rs  inner_revlog.rs  manifest.rs  mod.rs  node.rs  nodemap.rs  nodemap_docket.rs  options.rs  patch.rs  path_encode.rs  revlog.rs
rust/hg-core/src/utils/: debug.rs  descending_revision_set.rs  docket.rs  files.rs  hg_path.rs  mod.rs  path_auditor.rs  strings.rs
rust/hg-core/tests/: test_missing_ancestors.rs
rust/hg-cpython/: Cargo.toml
rust/hg-cpython/src/: ancestors.rs  cindex.rs  conversion.rs  copy_tracing.rs  dagops.rs  dirstate.rs  discovery.rs  exceptions.rs  filepatterns.rs  lib.rs  parsers.rs  pybytes_deref.rs  ref_sharing.rs  revlog.rs  update.rs  utils.rs  vfs.rs
rust/hg-cpython/src/dirstate/: copymap.rs  dirs_multiset.rs  dirstate_map.rs  dispatch.rs  item.rs  non_normal_entries.rs  owning.rs  status.rs
rust/hg-fuse/: Cargo.toml
rust/hg-fuse/src/: fuse.rs  lib.rs
rust/hg-fuse/src/server/: local.rs  mod.rs  revision.rs  store.rs
rust/hg-pyo3/: Cargo.toml
rust/hg-pyo3/src/: ancestors.rs  annotate.rs  convert_cpython.rs  copy_tracing.rs  dagops.rs  deltas.rs  diff.rs  dirstate.rs  discovery.rs  exceptions.rs  file_index.rs  lib.rs  matchers.rs  node.rs  path.rs  pytracing.rs  repo.rs  revision.rs  shape.rs  store.rs  transaction.rs  update.rs  util.rs  utils.rs
rust/hg-pyo3/src/dirstate/: copy_map.rs  dirs_multiset.rs  dirstate_map.rs  item.rs  status.rs
rust/hg-pyo3/src/docs/: mod.rs  pyo3_types.rs
rust/hg-pyo3/src/revlog/: config.rs  index.rs  mod.rs
rust/rhg/: Cargo.toml  README.md
rust/rhg/src/: blackbox.rs  color.rs  commands.rs  error.rs  exitcode.rs  main.rs  ui.rs
rust/rhg/src/commands/: admin_narrow.rs  admin_narrow_client.rs  annotate.rs  cat.rs  config.rs  debug_narrow_fingerprint.rs  debugdata.rs  debugignorerhg.rs  debugrequirements.rs  debugrhgsparse.rs  files.rs  purge.rs  root.rs  script_hgignore.rs  status.rs  virtual_share.rs
rust/rhg/src/utils/: path_utils.rs
tests/: README.md  autodiff.py  badserverext.py  basic_test_result.py  blackbox-readonly-dispatch.py  (+790 more)
(+439 files in other folders)
