[package]
name = "hg-cpython"
version = "0.1.0"
authors = ["Georges Racinet <gracinet@anybox.fr>"]
edition = "2021"

[lib]
name='rusthg'
crate-type = ["cdylib"]

[dependencies]
cpython = { version = "0.7.1", features = ["extension-module"] }
crossbeam-channel = "0.5.6"
hg-core = { path = "../hg-core"}
libc = "0.2.137"
log = "0.4.17"
env_logger = "0.9.3"
stable_deref_trait = "1.2.0"
vcsgraph = "0.2.0"
