[package]
name = "hg-pyo3"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name='rusthgpyo3'
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.23.1" }
pyo3-sharedref = { path = "../pyo3-sharedref" }
hg-core = { path = "../hg-core"}
stable_deref_trait = "1.2.0"
log = "0.4.17"
logging_timer = "1.1.0"
derive_more = "0.99.17"
env_logger = "0.9.3"
vcsgraph = "0.2.0"
crossbeam-channel = "0.5.14"
