[package]
name = "hg-pyo3"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name='rusthgpyo3'
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
full-tracing = ["hg-core/full-tracing", "dep:tracing-chrome"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.24" }
pyo3-sharedref = { path = "../pyo3-sharedref" }
hg-core = { path = "../hg-core" }
format-bytes = "0.3.0"
stable_deref_trait = "1.2.0"
derive_more = { version = "2.0.1", features = ["display", "from"] }
vcsgraph = "0.2.0"
crossbeam-channel = "0.5.15"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-chrome = { version = "0.7.2", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dashmap = "6.1.0"
