[package]
name = "rhg"
version = "0.1.0"
authors = [
    "Antoine Cezar <antoine.cezar@octobus.net>",
    "Raphaël Gomès <raphael.gomes@octobus.net>",
]
edition = "2021"

[lints]
workspace = true

[features]
full-tracing = ["hg-core/full-tracing", "dep:tracing-chrome"]

[dependencies]
hg-core = { path = "../hg-core", default-features = false }
chrono = "0.4.23"
clap = { version = "4", features = ["cargo"] }
derive_more = "0.99.17"
home = "0.5.4"
lazy_static = "1.4.0"
regex = "1.7.0"
format-bytes = "0.3.0"
shellexpand = { version = "3.1", features = ["full"]}
whoami = "1.4"
which = "4.3.0"
rayon = "1.7.0"
libc = "0.2.155"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-chrome = { version = "0.7.2", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
serde_json = "1.0.140"
shlex = "1.3.0"
